--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Comic Neue', serif;
+}
+
+button, button:hover, button:active, button:focus {
+    border: none;
+    outline: none;
 }
 
 body {
@@ -9,25 +15,69 @@ body {
 }
 
 .wrapper {
+    min-width: 608px;
+    width: 31.6%;
     display: flex;
     flex-flow: column nowrap;
+    align-items: left;
+    margin: calc((50vh - 608px / 2) / 2) auto;
+}
+
+.bar {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    font-family: 'Comic Neue', serif;
-    margin-top: calc(50vh - 686px / 2);
+    margin-bottom: 20px;
 }
 
 #score {
+    line-height: 40px;
     font-weight: 400;
     font-size: 52px;
-    text-align: center;
-    margin-bottom: 8px;
+    text-align: left;
     color: #BABABA;
 }
 
+.changeSpeed {
+    min-width: 64px;
+    padding: 5px 0;
+    font-size: 18px;
+    text-align: center;
+    background: #252526;
+    color: #BABABA;
+    border-radius: 5px;
+    border: none;
+    transition: all 0.3s ease-in;
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    -ms-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+    cursor: pointer;
+}
+
+.changeSpeed-active {
+    background: #1b1b1b;
+    box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.17);
+}
+
+.changeSpeed:hover {
+    transition: all 0.3s ease-in;
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    -ms-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+    background: #2d2d2d;
+    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+    -moz-transform: scale(1.15);
+    -ms-transform: scale(1.15);
+    -o-transform: scale(1.15);
+}
+
 #game {
-    width: 608px;
-    height: 608px;
     background: #252526;
     background-image: url('img/bg.svg');
+    background-repeat: repeat;
+    background-size: 5.26315789473684%;
     border-radius: 11px;
 }
